# sparse

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  score_results_against_official.py  scorer_wrapper.py  utils.py
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  main.yml  tests.yml
cmake/: CompileOptions.cmake  Dependencies.cmake
doc/: CMakeLists.txt  Doxyfile
include/sparse/common/: parser_interface.hpp  parsers.hpp  types.hpp  utility.hpp
include/sparse/parsers/: parsers.hpp  state_machine.hpp  title_parser.hpp  tokens.hpp
include/sparse/parsers/revisions/: state_machine.hpp  tokens.hpp
modules/: CMakeLists.txt
modules/parser/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  parse_bibliography.cpp  utility.cpp
src/parsers/: CMakeLists.txt  parse_bibliography.cpp  parse_revisions.cpp  parse_toc.cpp  parse_versions.cpp  title_parser.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  tests_common.cpp  tests_parse_bibliography.cpp
tests/parsers/: CMakeLists.txt  test_parse_versions.cpp  tests_parse_bibliography.cpp  tests_parse_revisions.cpp  tests_parse_title.cpp  tests_parse_versions.cpp
tests/parsers/test_data/: NSCIB-CC-195714_3-STv3.1.txt
